Prepare Day2 Input and Main

--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -14,6 +14,9 @@
     <None Update="Input\Day1_1_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day2_1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
