--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -17,6 +17,9 @@
     <None Update="Input\Day2_1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day2_1_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
