Prepare Day 4 Input and Main

--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -26,6 +26,9 @@
     <None Update="Input\Day3_1_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day4_1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
