--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -29,6 +29,9 @@
     <None Update="Input\Day4_1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day4_1_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
