Prepare Day 5 Input and Main

--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -32,6 +32,12 @@
     <None Update="Input\Day4_1_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day5_1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Input\Day5_1_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
