--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -38,6 +38,9 @@
     <None Update="Input\Day5_1_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day5_2_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
