Prepare Day 6 Input and Main

--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -41,6 +41,12 @@
     <None Update="Input\Day5_2_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day6_1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Input\Day6_1_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
