--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -47,6 +47,9 @@
     <None Update="Input\Day6_1_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day7_1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
