Day 7 Part 1 Complete - Some Assembly required. Circuit simulator

--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -50,6 +50,9 @@
     <None Update="Input\Day7_1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day7_1_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
