Prepare day 9 Input and main

--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -59,6 +59,12 @@
     <None Update="Input\Day8_1_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day9_1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Input\Day9_1_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
