--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Input\Day10_1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
