--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -48,6 +48,9 @@
     <None Update="Input\Day15_1_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day16_1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Input\Day1_1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
