--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -54,6 +54,9 @@
     <None Update="Input\Day17_1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day17_1_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Input\Day1_1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
