--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -57,6 +57,12 @@
     <None Update="Input\Day17_1_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day18_1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Input\Day18_1_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Input\Day1_1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
