Prepare Day 19 Main and Input. Try to add a readme.md file for day 19

--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -63,6 +63,12 @@
     <None Update="Input\Day18_1_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day19_1_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Input\Day19_1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Input\Day1_1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
