Day 25 - Part 1 Completed. Finding the code

--- a/AoC15/AoC15.csproj
+++ b/AoC15/AoC15.csproj
@@ -82,6 +82,12 @@
     <None Update="Input\Day24_1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Input\Day25_1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Input\Day25_1_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Input\Day24_1_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
